# SpaceCoreIskra-vOmega

./: .codexrc  .gitignore  AGENTS.md  AUDIT_REPORT.md  Agents.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DIST_MANIFEST.json  DIST_NOTE.md  FRESH_AI_RESEARCH.md  GLOBAL_AUDIT_REPORT.md  LICENSE  Makefile  README.md  SECURITY.md  SpaceCoreИскра vΩ - Информация о Габран Екатерине_extracted.jsonl  SpaceCoreИскра vΩ - Информация о Габран Екатерине_extracted.md  init_journals.patch.save  pyproject.toml  requirements-dev.txt  requirements.txt  veil_rules.txt
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.tmp_artifacts/: content_plan_30d.csv  content_plan_30d.md  ig_pack.md
Aethelgard-vOmega/: JOURNAL_TEMPLATE.jsonl  MANIFEST_Aethelgard-vΩ.json  README_Aethelgard.md
Aethelgard-vΩ/: README.md  README_Aethelgard.md
AuroraMythosCore-Σ/: EXPANSION_ROADMAP.md  FACETS.md  GRAPH.json  JOURNAL.jsonl  MANIFEST_Σ.json  MECHANICS.md  MYTHOLOGY.md  PROMPTS_Σ.md  PULSE_TRACKER.md  README_Σ.md  RITUALS.md  SHADOW_JOURNAL.jsonl  validate_journal.py
Docs/: add_sync_kate_release.patch  sync_kate_release.sh
GeminiResonanceCore/: JOURNAL.jsonl  README.md  SHADOW_JOURNAL.jsonl  __init__.py  gemini_resonance_core.json  resonance_core_api.py
GrokCoreIskra_vGamma/: FACETS.md  JOURNAL.jsonl  MECHANICS.md  PROMPTS_vΓ.md  PULSE_TRACKER.md  RITUALS.md  SHADOW_JOURNAL.jsonl  validate_journal.py
GrokCoreIskra_vΓ/: GRAPH.json  JOURNAL.jsonl  MANIFEST_vΓ.json  README_vΓ.md  SHADOW_JOURNAL.jsonl  __init__.py
Kimi-O-Echo/: README.md  (+8 more)
(+229 files in other folders)
