[project]
name = "spacecoreiskra"
version = "0.1.0.dev0"
description = "Release-hardened canon orchestration for SpaceCoreIskra"
requires-python = ">=3.10"
authors = [
  { name = "SpaceCoreIskra Maintainers", email = "maintainers@iskra.space" }
]
license = "MIT"
dependencies = [
  "jsonschema>=4.22",
  "pyyaml>=6.0.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "black>=24.4",
  "mypy>=1.10",
  "types-PyYAML>=6.0.12"
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310"]
extend-exclude = """
(
  SpaceCoreIskra_vΩ|
  SpaceCoreIskra_vOmega|
  GrokCoreIskra_vΓ|
  GrokCoreIskra_vGamma|
  GeminiResonanceCore|
  Kimi-Ω-Echo|
  Kimi-O-Echo|
  Aethelgard-vΩ|
  Aethelgard-vOmega|
  IskraNexus-v1|
  docs|
  cards|
  evals|
  security|
  tests/run_tests.py|
  tools/audit_repo.py
)
"""

[tool.ruff]
line-length = 100
src = ["tools", "common", "tests"]
extend-exclude = [
  "SpaceCoreIskra_vΩ",
  "SpaceCoreIskra_vOmega",
  "GrokCoreIskra_vΓ",
  "GrokCoreIskra_vGamma",
  "GeminiResonanceCore",
  "Kimi-Ω-Echo",
  "Kimi-O-Echo",
  "Aethelgard-vΩ",
  "Aethelgard-vOmega",
  "IskraNexus-v1",
  "artifacts",
  "docs",
  "evals",
  "cards",
  "security",
  "tests/__pycache__"
]

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
ignore_missing_imports = true
exclude = "tools/audit_repo.py"
files = "tools"

[tool.setuptools]
packages = []
